--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "symfony/event-dispatcher": "*",
         "symfony/http-kernel": "*",
 
-        "polishsymfonycommunity/symfony-mocker-container": "~2.0.0"
+        "polishsymfonycommunity/symfony-mocker-container": ">=1.1.0"
     },
     "require-dev": {
         "phpspec/phpspec": "2.0.*@dev",
