--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 
         "mockery/mockery":              ">=0.7.0",
 
-        "polishsymfonycommunity/symfony-mocker-container": "*"
+        "polishsymfonycommunity/symfony-mocker-container": "1.0.*"
     },
     "autoload": {
         "psr-0": { "PSS\\Behat\\Symfony2MockerExtension": "src/" }
