--- a/composer.json
+++ b/composer.json
@@ -16,22 +16,21 @@
         }
     ],
     "require": {
-        "php":                          ">=5.3.2",
-
-        "behat/behat":                  ">=2.4",
-        "behat/mink":                   ">=1.4",
-        "behat/symfony2-extension":     "*",
-
-        "symfony/config":               "*",
-        "symfony/dependency-injection": "*",
-        "symfony/event-dispatcher":     "*",
-        "symfony/http-kernel":          "*",
-
-        "mockery/mockery":              ">=0.7.0",
-
-        "polishsymfonycommunity/symfony-mocker-container": "1.0.*"
+        "php":                          "^5.4",
+        "behat/behat":                  "^3.0",
+        "behat/mink":                   "^1.4",
+        "behat/mink-extension":         "^2.0",
+        "behat/mink-browserkit-driver": "^1.0",
+        "behat/symfony2-extension":     "^2.0",
+        "mockery/mockery":              "^0.7.0",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
     "autoload": {
-        "psr-0": { "PSS\\Behat\\Symfony2MockerExtension": "src/" }
+        "psr-4": { "PSS\\Behat\\Symfony2MockerExtension\\": "src/" }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0-dev"
+        }
     }
 }
