--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php":                          "^5.4",
+        "php":                          "^5.5|^7.0",
         "behat/behat":                  "^3.0",
         "behat/mink":                   "^1.4",
         "behat/mink-extension":         "^2.0",
