--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "behat/mink-extension":         "^2.0",
         "behat/mink-browserkit-driver": "^1.0",
         "behat/symfony2-extension":     "^2.0",
-        "mockery/mockery":              "^0.7.0",
+        "mockery/mockery":              "~0.7",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
     "autoload": {
